--- a/web/src/pages/index.html
+++ b/web/src/pages/index.html
@@ -13,16 +13,25 @@
 {{ end }}
 
 
-{{ define "main_content" }}
-<main>
-    <h1>Rasul suck</h1>
-    <h1>Rasul suck</h1>
-    <h1>Rasul suck</h1>
-</main>
+{{ define "first_display" }}
+<section class="first_display">
+    <p class="firstLine">We’ve got your morning covered with</p>
+    <h1>Coffee</h1>
+    <p class="secondLine">It is best to start your day with a cup of coffee. Discover the<br>best flavours coffee you will ever have. We provide the best <br>for our customers.</p>
+    <button>Order Now</button>
+</section>
 {{ end }}
 
 
 {{define "second_display"}}
+<section class="second_display">
+    <div class="side_text">
+        <h1>Discover the best coffee</h1>
+        <p>Bean Scene is a coffee shop that provides you with quality <br> coffee that helps boost your productivity and helps build <br> your mood. Having a cup of coffee is good, but having a cup <br> of real coffee is greater. There is no doubt that you will <br> enjoy this coffee more than others you have ever tasted.</p>
+        <button>Learn more</button>
+    </div>
+    <img src="/web/public/section_secondDisplay/stylized-cup-coffee-out-coffee-beans-flat-lay 1.png" alt="">
+</section>
 {{ end }}
 
 
