frontend: done with second display

--- a/web/src/pages/index.html
+++ b/web/src/pages/index.html
@@ -15,7 +15,7 @@
 
 {{ define "first_display" }}
 <section class="first_display">
-    <p class="firstLine">We’ve got your morning covered with</p>
+    <p class="firstLine">We've got your morning covered with</p>
     <h1>Coffee</h1>
     <p class="secondLine">It is best to start your day with a cup of coffee. Discover the<br>best flavours coffee you will ever have. We provide the best <br>for our customers.</p>
     <button>Order Now</button>
@@ -30,7 +30,9 @@
         <p>Bean Scene is a coffee shop that provides you with quality <br> coffee that helps boost your productivity and helps build <br> your mood. Having a cup of coffee is good, but having a cup <br> of real coffee is greater. There is no doubt that you will <br> enjoy this coffee more than others you have ever tasted.</p>
         <button>Learn more</button>
     </div>
-    <img src="/web/public/section_secondDisplay/stylized-cup-coffee-out-coffee-beans-flat-lay 1.png" alt="">
+    <div class="image_container">
+        <img src="static/section_secondDisplay/stylized-cup-coffee-out-coffee-beans-flat-lay 1.png" alt="">
+    </div>
 </section>
 {{ end }}
 
